--- a/src/components/pages/home/Style/PromoSection.css
+++ b/src/components/pages/home/Style/PromoSection.css
@@ -175,7 +175,9 @@
 }
 
 @media screen and (max-width: 769px) {
-  
+  #promo {
+    height: 1320px;
+  }  
 }
 
 @media screen and (max-width: 426px) {
