--- a/src/components/Auth/Style/login.css
+++ b/src/components/Auth/Style/login.css
@@ -5,8 +5,9 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  z-index: 3;
+  z-index: 1000;
   background-color: var(--bg-secondary);
+  overflow: hidden;
 }
 
 #login .container {
@@ -325,8 +326,48 @@
   background-color: var(--btnPrimary);
 }
 
+  /* SMALL SCREEN SIZE CSS */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1441px) {
+  
+  #login .container {
+    padding: 0 5rem;
+    width: 100%;
+  }
+}
+  
+@media screen and (max-width: 1341px) {
+  #login .container {
+    padding: 0 4rem;
+  }
+}
+  
+@media screen and (max-width: 1241px) {
+  #login .container {
+    padding: 0 3rem;
+  }
+}
+  
+@media screen and (max-width: 1141px) {
+  #login .container {
+    padding: 0 2rem;
+  }
+}
+  
+@media screen and (max-width: 941px) { 
+  #login .container {
+    padding: 0 1.5rem;
+  }
+  
+}
+  
+@media screen and (max-width: 841px) { 
+  #login .container {
+    padding: 0 1rem;
+  }
+}
+  
+@media screen and (max-width: 769px) {
 
   .main-user-login-container,
   .main-user-login-container * {
@@ -352,237 +393,68 @@
     }
   }
 
-  .mobile-login-main-container{
-    /* add scroll */
-    overflow-y: scroll;
+  .scrollable-container {
+    height: 70vh; /* Adjust the height as needed */
+    overflow-y: auto;
   }
-  .login-main-container {
-    /* height: 160rem;
-    background-color: #e12454;
-    background-size: cover;
-    background-color: white;
-    background-position: center;
-    background-repeat: no-repeat;
-      width: 70rem;
-      display: grid;
-      grid-template-columns: 1fr;
-      position: fixed;
-     z-index: 4; */
+  
+
+  #login {
+    align-items: normal;
+    justify-content: none;
+  }
+
+  #login .container {
+    padding: 0;
+    margin: 0;
+  }
+
+  #login .main-login-container {
+    width: 100%;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    background-color: var(--secondary);
+    box-shadow: none;
+  }
+
+  #login .login-logo-container{
+    width: 100%;
+  }
+
+  #login .login-logo-container h1{
     display: none;
   }
 
-  .mobile-login-main-container {
-    width: 100dvw;
-    height: 160dvh;
-    background-color: #082342;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    z-index: 4;
-  }
- 
-
-  .main-user-login-container {
-    margin: 0;
-    padding: 0;
-    width: 99.8dvw;
-    height: 100dvh;
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    border-radius: 30px;
+  #login .main-user-login-container {
+    width: 100%;
+    border-radius: 50px 50px 0px 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
-  .login-title {
-    margin-top: 0;
-    text-transform: uppercase;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    letter-spacing: 1px;
-    color: #082342;
-    /* border: solid green; */
-  }
-
-  .user-separator {
-    width: 50dvw;
-    height: 4px;
-    background-color: #fad400;
-    margin: 24px auto 24px auto;
-  }
-
-  .welcome-message {
-    display: none;
-    text-align: center;
-    font-size: 18px;
-    line-height: 28px;
-    margin-bottom: 30px;
-    color: #082342;
-    /* border: solid yellow; */
-  }
-
-  .user-login-box {
+  #login .user-login-box {
     width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    overflow-x: hidden;
   }
 
-  .user-login-form-control {
-    width: 100%;
-    position: relative;
-    margin-bottom: 24px;
-  }
-
-  .user-login-box input,
-  .user-login-box button {
-    border: none;
-    outline: none;
-    border-radius: 30px;
-    font-size: 1.1em;
-  }
-
-  .user-login-box input {
-    width: 100%;
-    background: #e6e6e6;
-    color: #333;
-    letter-spacing: 0.5px;
-    padding: 14px 64px;
-  }
-  .login-link{
-    margin-bottom: 100px;
-  }
-
-  .user-login-box input ~ i {
-    position: absolute;
-    left: 32px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #888;
-    transition: color 0.4s;
-  }
-
-  .user-login-box input:focus ~ i {
-    color: #ff5c17;
-  }
-
-  /* Hide the browser's default checkbox */
-  .user-check-box input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-
-  /* Create a custom checkbox */
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    background-color: #eee;
-  }
-
-  /* On mouse-over, add a grey background color */
-  .user-check-box :hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-
-  /* When the checkbox is checked, add a blue background */
-  .user-check-box input:checked ~ .checkmark {
-    background-color: #082342;
-  }
-
-  /* Create the checkmark/indicator (hidden when not checked) */
-  .checkmark:after {
-    content: "";
-    position: absolute;
+  .default-shape {
     display: none;
   }
+    
+}
+  
+@media screen and (max-width: 426px) {
 
-  /* Show the checkmark when checked */
-  .user-check-box input:checked ~ .checkmark:after {
-    display: block;
+  #login .main-user-login-container .mobile-none{
+    display: none;
   }
+  
+}
+  
+@media screen and (max-width: 401px) {
 
-  /* Style the checkmark/indicator */
-  .user-check-box .checkmark:after {
-    left: 8px;
-    top: 4px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-
-  .user-check-box {
-    padding: 10px;
-  }
-
-  .rm span {
-    padding-left: 10px;
-    color: #082342;
-    font-size: 15px;
-  }
-
-  .user-login-box .btn1 {
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: bold;
-    background-image: linear-gradient(to right, #024ca1, #082342);
-    cursor: pointer;
-    transition: opacity 0.4s;
-  }
-
-  .user-login-box .btn1:hover {
-    opacity: 0.9;
-  }
-
-  .dnthave {
-    text-align: center;
-    margin-top: 10px;
-  }
-
-  a {
-    color: #082342;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #fad400;
-    text-decoration: underline;
-  }
-
-  .side {
-    width: 100dvw;
-    display: flex;
-    justify-content: center;
-    margin: 5dvh 0dvw 5dvh 0dvw;
-    /* display: none; */
-  }
-
-  .side img {
-    width: 65dvw;
-    height: auto;
-    /* display: none; */
-  }
-
-
-  .dnthave{
-    margin-bottom: 130px;
-  }
-  .scrollable-container {
-    max-height: 70vh; /* Adjust the height as needed */
-    overflow-y: auto;
-  }
 }
