--- a/src/components/pages/appointment/Styles/AppointmentLog.css
+++ b/src/components/pages/appointment/Styles/AppointmentLog.css
@@ -2,7 +2,7 @@
 .appointment-log-container {
     width: 100%;
     margin: 0 auto;
-    background-color: white;
+    background-color: var(--bg-primary);
     margin-top: 10px;
     text-align: center;
     padding: 11px;
@@ -16,31 +16,20 @@
     margin-bottom: 20px;
   }
   
-  /* Styling for the title */
-  .appointment-log-container h2 {
-    margin-top: 15px;
-    font-family: 'montserrat';
-    font-weight: bolder;
-    color: #082342;
-  }
-  
-  /* Styling for loading and error messages */
   .loading-message,
   .error-message {
-    color: #e74c3c; /* Red color for error messages */
+    color: var(--btnDanger);
   }
   
-  /* Styling for the table */
   .appointment-log-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
   }
   
-  /* Styling for the table header */
   .appointment-log-table th {
-    background-color: #082342; /* pinkred color for header background */
-    color: #ffffff;
+    background-color: var(--bg-ascend2); 
+    color: var(--bg-primary);
     font-family: 'montserrat';
     font-weight: bolder;
     text-align: center;
@@ -50,7 +39,7 @@
   /* Styling for the table rows */
   .appointment-log-item {
     text-align: center;
-    background-color: #ffffff;
+    background-color: var(--bg-primary);
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -67,94 +56,17 @@
   .appointment-log-table td {
     padding: 15px;
   }
-  
-  /* Styling for responsive adjustments */
-  @media (max-width: 768px) {
-    .appointment-log-item {
-      padding: 10px;
-    }
-    .appointment-log-table {
-      font-size: 14px; /* Adjust font size for smaller screens */
-    }
-  
-    .appointment-log-table th,
-    .appointment-log-table td {
-      padding: 6px;
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    .appointment-log-container {
-      width: 100%;
-      margin: 0 auto;
-      background-color: white;
-      margin-top: 10px;
-      text-align: center;
-      padding: 11px;
-      border-radius: 5px;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
-
-.mobile-res-table {
-  width: 100%; /* Set the width of the container */
-  overflow-x: auto; /* Enable horizontal scrolling */
-  white-space: nowrap; /* Prevent content from wrapping */
-}
-
-.mobile-table-container {
-  width: 210%; /* Set the width of the container */
-}
 
 
-  /* Styling for the table */
-  .appointment-log-table {
+@media screen and (max-width: 768px) {
+  .mobile-res-table {
     width: 100%; /* Set the width of the container */
-    border-collapse: collapse;
-    margin-top: 20px;
-    
+    overflow-x: auto; /* Enable horizontal scrolling */
+    white-space: nowrap; /* Prevent content from wrapping */
   }
 
-    /* Styling for the title */
-    h2 {
-      color: #333333;
-    }
-    
-    /* Styling for loading and error messages */
-    .loading-message,
-    .error-message {
-      color: #e74c3c; /* Red color for error messages */
-    }
-    
-    /* Styling for the table header */
-    .appointment-log-table th {
-      font-size: 14px;
-      background-color: #082342; /* pinkred color for header background */
-      color: #ffffff;
-      font-weight: bold;
-      text-align: center;
-      padding: 10px;
-    }
-    
-    /* Styling for the table rows */
-    .appointment-log-item {
-      text-align: center;
-      background-color: #ffffff;
-      border: 1px solid #e0e0e0;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      margin-bottom: 10px;
-      padding: 15px;
-      transition: transform 0.3s ease-in-out;
-    }
-    
-    .appointment-log-item:hover {
-      transform: scale(1.02);
-    }
-    
-    /* Styling for the table data cells */
-    .appointment-log-table td {
-      padding: 15px;
-    }
-
+  .mobile-table-container {
+    width: 100%; /* Set the width of the container */
   }
+}
   
