--- a/src/components/pages/appointment/Styles/AppointmentPage.css
+++ b/src/components/pages/appointment/Styles/AppointmentPage.css
@@ -1,5 +1,6 @@
 #appointment {
   width: 100%;
+  height: 100%;
   background-color: var(--bg-secondary);
   display: flex;
   justify-content: center;
@@ -7,6 +8,7 @@
 
 .main-appointment-container {
   margin-top: 80px;
+  margin-bottom: 50px;
     width: 1340px;
     text-align: center;
     padding: 25px;
@@ -233,26 +235,60 @@
   }
 
 
-@media screen and (max-width: 768px) {
-    .whole-appointment-container {
-        margin-top: 75px;
-        height: auto;
-        width: 100dvw;
-        padding-top: 230px;
-        background-color: white;
-        display: flex;
-        justify-content: center;
-        padding: 0px;
-    }
+/* SMALL SCREEN SIZE CSS */
 
-    .main-appointment-container {
-        width: 100%;
-        /* background-color: white; */
-        margin-top: 10px;
-        text-align: center;
-        padding: 10px;
-        border-radius: 5px;
-        /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    }
-
+@media screen and (max-width: 1441px) {
+  
+.main-appointment-container {
+    padding: 0 5rem;
+    width: 100%;
+  }
+}
+    
+@media screen and (max-width: 1341px) {
+.main-appointment-container {
+    padding: 0 4rem;
+  }
+}
+    
+@media screen and (max-width: 1241px) {
+.main-appointment-container {
+    padding: 0 3rem;
+  }
+}
+    
+@media screen and (max-width: 1141px) {
+.main-appointment-container {
+    padding: 0 2rem;
+  }
+}
+    
+@media screen and (max-width: 941px) { 
+.main-appointment-container {
+    padding: 0 1.5rem;
+  }
+}
+    
+@media screen and (max-width: 841px) { 
+.main-appointment-container {
+    padding: 0 1rem;
+  }
+}
+    
+@media screen and (max-width: 769px) {
+  
+  
+}
+    
+@media screen and (max-width: 426px) {
+  
+  .appointment-type-container {
+    flex-wrap: wrap;
+    gap: 20px;
+}
+    
+}
+    
+@media screen and (max-width: 401px) {
+  
 }
